# github-scripts

./: .gitignore  .pre-commit-config.yaml  QAD_org_Member.py  README.md  enterprise_copilot_stats.py  enterprise_org_list.py  gh_api_remain.py  gh_comms_team.py  gh_dependency_search.py  gh_file_search.py  gh_org_licenses.py  gh_org_owners.py  gh_org_repo_perms.py  gh_org_stats.py  gh_pat_owner.py  gh_user_moderation.py  gh_user_perms.py  issueconf.yaml.example  org_add_action_rule.py  org_add_user.py  org_audit_licensefile.py  org_comms_team.py  org_dependency_search.py  org_find_hooks.py  org_find_keys.py  org_list.py  org_owners.py  org_remove_action_rule.py  org_remove_user.py  org_repo_perms.py  org_repo_perms_classic.py  org_repos.py  org_samlreport.py  org_secret_alerts.py  org_team_perms.py  org_teams.py  org_user_membership.py  orglist.ini-EXAMPLE  pyproject.toml  repo_active_users.py  (+16 more)
.github/workflows/: main.yml
cis_tools/: README.md  cis_db_tool.py  cis_user_query.py  get_gh_org_emails.py  pyproject.toml
cis_tools/cis_tools/: cis.py  db_migrate.py  github.py
cis_tools/samples/: get_cis_access_token.py  is_staff_portable.py
deprecated/: enterprise_action_check.py  gh_file_search.py
github_scripts/: utils.py
tests/: test_binaries_help_output.sh  test_binary_help_output.py  utils_test.py
