[tool.black]
line-length = 100

[tool.poetry]
name = "github-scripts"
version = "0.1.0"
description = ""
authors = ["Chris Knowles <cknowles@mozilla.com>"]
readme = "README.md"
packages = [{include = "github_scripts"}]

[tool.poetry.dependencies]
python = "^3.9"
github3-py = "^3.2.0"
# pinned to aerickson's stderr change, waiting for release of feature (https://github.com/rsalmei/alive-progress/issues/177)
alive-progress = {git = "https://github.com/MoCo-GHE-Admin/alive-progress.git", rev = "02e8eb93b75a96830deb641a4609015b5c9023a4"}
# `getch` has installation issues with poetry
py-getch = "^1.0.1"
toml = "^0.10.2"
pytz = "^2022.5"
gitpython = "^3.1.29"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
