[tool.black]
line-length = 100

[tool.poetry]
name = "github-scripts"
version = "0.1.0"
description = ""
authors = ["Chris Knowles <cknowles@mozilla.com>"]
readme = "README.md"
packages = [{include = "github_scripts"}]

[tool.poetry.dependencies]
python = "^3.9"
github3-py = "^3.2.0"
alive-progress = "^3.0.1"
# `getch` has installation issues with poetry
py-getch = "^1.0.1"
toml = "^0.10.2"
pytz = "^2022.5"
gitpython = "^3.1.37"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.3"
pytest = "^7.2.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
